--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -90,7 +90,8 @@ plugins:
 include: ['_pages']
 
 paginate: 6
-paginate_path: _posts/page:num/
+paginate_path: "/_posts/page:num/"
+
 
 # Exclude these files from your production _site
 exclude:
