--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -56,6 +56,7 @@ enforce_ssl: https://favarete.github.io/manifesto
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
 baseurl: "/manifesto"
+articlesurl: "/manifesto/blog"
 
 #
 # !! You don't need to change any of the configuration flags below !!
