--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -55,8 +55,8 @@ enforce_ssl: https://favarete.github.io/manifesto
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/manifesto"
-articlesurl: "/manifesto/blog"
+baseurl: "/"
+articlesurl: "/blog"
 
 #
 # !! You don't need to change any of the configuration flags below !!
