Revert "Remove site description"
This reverts commit 3cea8aed4dcba8a78939ebed9869e085ea12000f.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -4,6 +4,7 @@
 name: Movimento Lidimista
 author: Rodrigo Favarete
 avatar: /images/lidimism.png
+description:
 
 # Includes an icon in the footer for each username
 footer-links:
