--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,7 +28,7 @@ footer-links:
 disqus: 
 
 # Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: UA-43339302-11
+google_analytics: G-R30V8K0EDG
 
 # For newer "GA4" analytics, use the following instead of the "UA" entry above
 #google_analytics_ga4: G-GABC1DEFG
