--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -28,10 +28,10 @@ footer-links:
 disqus: 
 
 # Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: active
+# google_analytics:
 
 # For newer "GA4" analytics, use the following instead of the "UA" entry above
-#google_analytics_ga4: G-GABC1DEFG
+google_analytics_ga4: G-R30V8K0EDG
 
 # Website URL
 # Used for Sitemap.xml and your RSS feed
