--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -31,7 +31,7 @@ disqus:
 # google_analytics:
 
 # For newer "GA4" analytics, use the following instead of the "UA" entry above
-google_analytics_ga4: G-DQTTJ99TLM
+google_analytics_ga4: G-4E96T861XG
 
 # Website URL
 # Used for Sitemap.xml and your RSS feed
