--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fontsource/oswald": "^4.5.1",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
+    "@reach/router": "^1.3.4",
     "aphrodite-jss": "^2.1.0",
     "gatsby": "^3.2.1",
     "gatsby-plugin-create-client-paths": "^3.2.0",
@@ -27,10 +28,13 @@
     "gatsby-plugin-sharp": "^3.13.0",
     "gatsby-source-filesystem": "^3.13.0",
     "gatsby-theme-i18n": "^2.0.0",
+    "gatsby-theme-i18n-react-i18next": "^2.0.0",
     "gatsby-transformer-sharp": "^3.13.0",
+    "i18next": "^20.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-i18next": "^11.11.4"
   },
   "devDependencies": {
     "@material-ui/core": "^4.12.3"
